Add proteinkmer to Makefiles, JIRA:SB-2028
git-svn-id: https://anonsvn.ncbi.nlm.nih.gov/repos/v1/trunk/c++@77914 78c7ea69-d796-4a43-9a09-de51944f1b03

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,5 +14,6 @@ add_subdirectory(format)
 add_subdirectory(blastinput)
 add_subdirectory(igblast)
 add_subdirectory(gumbel_params)
+add_subdirectory(proteinkmer)
 add_subdirectory(unit_tests)
 add_subdirectory(blast_sra_input)
