--- a/Makefile.in
+++ b/Makefile.in
@@ -3,7 +3,7 @@
 # Meta-makefile ("BLAST" project)
 #################################
 
-SUB_PROJ = composition_adjustment core dbindex dbindex_search api format \
+SUB_PROJ = composition_adjustment core dbindex dbindex_search api proteinkmer format \
            blastinput blast_sra_input igblast gumbel_params unit_tests
 
 WATCHERS = camacho madden
