--- a/unit_tests/api/traceback_unit_test.ini
+++ b/unit_tests/api/traceback_unit_test.ini
@@ -1,3 +1,5 @@
 ; $Id$
 [UNITTESTS_DISABLE]
 GLOBAL = OS_Solaris
+testSetupPartialFetching = !FEATURE_in_house_resources
+testPartialFetchingMT = !FEATURE_in_house_resources
